# cyrus-timezones

./: .gitignore  AUTHORS  COPYING  INSTALL  MAINTAINER_NOTES  Makefile.am  README  configure.ac  cyrus-timezones.pc.in  guesstz.pc.in
guesstz/: .gitignore  Makefile.am  guesstz.c  guesstz.h
guesstz/tests/: berlin.sh  gmt.sh  test.sh  us_eastern.sh
vzic/: Makefile.am  vzic-output.c  vzic-parse.c
zoneinfo.2020f/: CET.ics  CST6CDT.ics  Cuba.ics  EET.ics  EST.ics  EST5EDT.ics  Egypt.ics  Eire.ics  GB-Eire.ics  GB.ics  GMT+0.ics  GMT-0.ics  GMT.ics  GMT0.ics  Greenwich.ics  HST.ics  Hongkong.ics  Iceland.ics  Iran.ics  Israel.ics  Jamaica.ics  Japan.ics  Kwajalein.ics  Libya.ics  MET.ics  MST.ics  MST7MDT.ics  NZ-CHAT.ics  NZ.ics  Navajo.ics  PRC.ics  PST8PDT.ics  Poland.ics  Portugal.ics  ROC.ics  ROK.ics  Singapore.ics  Turkey.ics  UCT.ics  UTC.ics  (+5 more)
zoneinfo.2020f/Africa/: Abidjan.ics  Accra.ics  Addis_Ababa.ics  Algiers.ics  Asmara.ics  Asmera.ics  Bamako.ics  Bangui.ics  Banjul.ics  Bissau.ics  Blantyre.ics  Brazzaville.ics  Bujumbura.ics  Cairo.ics  Casablanca.ics  Ceuta.ics  Conakry.ics  Dakar.ics  Dar_es_Salaam.ics  Djibouti.ics  Douala.ics  El_Aaiun.ics  Freetown.ics  Gaborone.ics  Harare.ics  Johannesburg.ics  Juba.ics  Kampala.ics  Khartoum.ics  Kigali.ics  Kinshasa.ics  Lagos.ics  Libreville.ics  Lome.ics  Luanda.ics  Lubumbashi.ics  Lusaka.ics  Malabo.ics  Maputo.ics  Maseru.ics  (+14 more)
zoneinfo.2020f/America/: Adak.ics  Anchorage.ics  Anguilla.ics  Antigua.ics  Araguaina.ics  Aruba.ics  Asuncion.ics  Atikokan.ics  Atka.ics  Bahia.ics  Bahia_Banderas.ics  Barbados.ics  Belem.ics  Belize.ics  Blanc-Sablon.ics  Boa_Vista.ics  Bogota.ics  Boise.ics  Buenos_Aires.ics  Cambridge_Bay.ics  Campo_Grande.ics  Cancun.ics  Caracas.ics  Catamarca.ics  Cayenne.ics  Cayman.ics  Chicago.ics  Chihuahua.ics  Coral_Harbour.ics  Cordoba.ics  Costa_Rica.ics  Creston.ics  Cuiaba.ics  Curacao.ics  Danmarkshavn.ics  Dawson.ics  Dawson_Creek.ics  Denver.ics  Detroit.ics  Dominica.ics  (+101 more)
zoneinfo.2020f/Antarctica/: Casey.ics  Davis.ics  DumontDUrville.ics  Macquarie.ics  Mawson.ics  McMurdo.ics  Palmer.ics  Rothera.ics  South_Pole.ics  Syowa.ics  Troll.ics  Vostok.ics
zoneinfo.2020f/Arctic/: Longyearbyen.ics
zoneinfo.2020f/Asia/: Aden.ics  Almaty.ics  Amman.ics  Anadyr.ics  Aqtau.ics  Aqtobe.ics  Ashgabat.ics  Ashkhabad.ics  Atyrau.ics  Baghdad.ics  Bahrain.ics  Baku.ics  Bangkok.ics  Barnaul.ics  Beirut.ics  Bishkek.ics  Brunei.ics  Calcutta.ics  Chita.ics  Choibalsan.ics  Chongqing.ics  Chungking.ics  Colombo.ics  Dacca.ics  Damascus.ics  Dhaka.ics  Dili.ics  Dubai.ics  Dushanbe.ics  Famagusta.ics  Gaza.ics  Harbin.ics  Hebron.ics  Ho_Chi_Minh.ics  Hong_Kong.ics  Hovd.ics  Irkutsk.ics  Istanbul.ics  Jakarta.ics  Jayapura.ics  (+59 more)
zoneinfo.2020f/Atlantic/: Azores.ics  Bermuda.ics  Canary.ics  Cape_Verde.ics  Faeroe.ics  Faroe.ics  Jan_Mayen.ics  Madeira.ics  Reykjavik.ics  South_Georgia.ics  St_Helena.ics  Stanley.ics
zoneinfo.2020f/Australia/: ACT.ics  Adelaide.ics  Brisbane.ics  Broken_Hill.ics  Canberra.ics  Currie.ics  Darwin.ics  Eucla.ics  Hobart.ics  LHI.ics  Lindeman.ics  Lord_Howe.ics  Melbourne.ics  NSW.ics  North.ics  Perth.ics  Queensland.ics  South.ics  Sydney.ics  Tasmania.ics  Victoria.ics  West.ics  Yancowinna.ics
zoneinfo.2020f/Brazil/: Acre.ics  DeNoronha.ics  East.ics  West.ics
zoneinfo.2020f/Canada/: Atlantic.ics  Central.ics  Eastern.ics  Mountain.ics  Newfoundland.ics  Pacific.ics  Saskatchewan.ics  Yukon.ics
zoneinfo.2020f/Chile/: Continental.ics  EasterIsland.ics
zoneinfo.2020f/Etc/: GMT+0.ics  GMT+1.ics  GMT+10.ics  GMT+11.ics  GMT+12.ics  GMT+2.ics  GMT+3.ics  GMT+4.ics  GMT+5.ics  GMT+6.ics  GMT+7.ics  GMT+8.ics  GMT+9.ics  GMT-0.ics  GMT-1.ics  GMT-10.ics  GMT-11.ics  GMT-12.ics  GMT-13.ics  GMT-14.ics  GMT-2.ics  GMT-3.ics  GMT-4.ics  GMT-5.ics  GMT-6.ics  GMT-7.ics  GMT-8.ics  GMT-9.ics  GMT.ics  GMT0.ics  Greenwich.ics  UCT.ics  UTC.ics  Universal.ics  Zulu.ics
zoneinfo.2020f/Europe/: Amsterdam.ics  Andorra.ics  Astrakhan.ics  Athens.ics  Belfast.ics  Belgrade.ics  Berlin.ics  Bratislava.ics  Brussels.ics  Bucharest.ics  Budapest.ics  Busingen.ics  Chisinau.ics  Copenhagen.ics  Dublin.ics  Gibraltar.ics  Guernsey.ics  Helsinki.ics  Isle_of_Man.ics  Istanbul.ics  Jersey.ics  Kaliningrad.ics  Kiev.ics  Kirov.ics  Lisbon.ics  Ljubljana.ics  London.ics  Luxembourg.ics  Madrid.ics  Malta.ics  Mariehamn.ics  Minsk.ics  Monaco.ics  Moscow.ics  Nicosia.ics  Oslo.ics  Paris.ics  Podgorica.ics  Prague.ics  Riga.ics  (+23 more)
zoneinfo.2020f/Indian/: Antananarivo.ics  Chagos.ics  Christmas.ics  Cocos.ics  Comoro.ics  Kerguelen.ics  Mahe.ics  Maldives.ics  Mauritius.ics  Mayotte.ics  Reunion.ics
zoneinfo.2020f/Mexico/: BajaNorte.ics  BajaSur.ics  General.ics
zoneinfo.2020f/Pacific/: Apia.ics  Auckland.ics  Bougainville.ics  Chatham.ics  Chuuk.ics  Easter.ics  Efate.ics  Enderbury.ics  Fakaofo.ics  Fiji.ics  Funafuti.ics  Galapagos.ics  Gambier.ics  Guadalcanal.ics  Guam.ics  Honolulu.ics  Johnston.ics  Kiritimati.ics  Kosrae.ics  Kwajalein.ics  Majuro.ics  Marquesas.ics  Midway.ics  Nauru.ics  Niue.ics  Norfolk.ics  Noumea.ics  Pago_Pago.ics  Palau.ics  Pitcairn.ics  Pohnpei.ics  Ponape.ics  (+11 more)
(+38 files in other folders)
